# immichFrame.Web/src/lib/immichFrameApi.ts
@@ -1,4 +1,3 @@
-/* eslint-disable @typescript-eslint/no-explicit-any */
 /**
  * ImmichFrame.WebApi
  * 1.0
@@ -40,7 +39,6 @@ export type ExifResponseDto = {
         [key: string]: any | null;
     } | null;
 };
-export type UserAvatarColor = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9;
 export type UserResponseDto = {
     avatarColor: UserAvatarColor;
     email: string;
@@ -85,8 +83,6 @@ export type TagResponseDto = {
         [key: string]: any | null;
     } | null;
 };
-export type AssetTypeEnum = 0 | 1 | 2 | 3;
-export type AssetVisibility = 0 | 1 | 2 | 3;
 export type AssetResponseDto = {
     immichServerUrl?: string | null;
     checksum: string;
@@ -125,7 +121,6 @@ export type AssetResponseDto = {
         [key: string]: any | null;
     } | null;
 };
-export type SourceType = 0 | 1 | 2;
 export type AssetFaceResponseDto = {
     boundingBoxX1?: number;
     boundingBoxX2?: number;
@@ -140,7 +135,6 @@ export type AssetFaceResponseDto = {
         [key: string]: any | null;
     } | null;
 };
-export type AlbumUserRole = 0 | 1 | 2;
 export type AlbumUserResponseDto = {
     role: AlbumUserRole;
     user: UserResponseDto;
@@ -155,7 +149,6 @@ export type ContributorCountResponseDto = {
         [key: string]: any | null;
     } | null;
 };
-export type AssetOrder = 0 | 1;
 export type AlbumResponseDto = {
     albumName: string;
     albumThumbnailAssetId?: string | null;
@@ -373,3 +366,47 @@ export function getWeather({ clientIdentifier }: {
         ...opts
     });
 }
+export const UserAvatarColor = {
+    Primary: "primary",
+    Pink: "pink",
+    Red: "red",
+    Yellow: "yellow",
+    Blue: "blue",
+    Green: "green",
+    Purple: "purple",
+    Orange: "orange",
+    Gray: "gray",
+    Amber: "amber"
+} as const;
+export type UserAvatarColor = (typeof UserAvatarColor)[keyof typeof UserAvatarColor];
+export const AssetTypeEnum = {
+    Image: "image",
+    Video: "video",
+    Audio: "audio",
+    Other: "other"
+} as const;
+export type AssetTypeEnum = (typeof AssetTypeEnum)[keyof typeof AssetTypeEnum];
+export const AssetVisibility = {
+    Archive: "archive",
+    Timeline: "timeline",
+    Hidden: "hidden",
+    Locked: "locked"
+} as const;
+export type AssetVisibility = (typeof AssetVisibility)[keyof typeof AssetVisibility];
+export const SourceType = {
+    MachineLearning: "machineLearning",
+    Exif: "exif",
+    Manual: "manual"
+} as const;
+export type SourceType = (typeof SourceType)[keyof typeof SourceType];
+export const AlbumUserRole = {
+    Editor: "editor",
+    Owner: "owner",
+    Viewer: "viewer"
+} as const;
+export type AlbumUserRole = (typeof AlbumUserRole)[keyof typeof AlbumUserRole];
+export const AssetOrder = {
+    Asc: "asc",
+    Desc: "desc"
+} as const;
+export type AssetOrder = (typeof AssetOrder)[keyof typeof AssetOrder];
